bee-common/bee-packable-derive/tests/fail/invalid_tag_enum.stderr
error: Tags for variants can only be literal or path expressions.
  --> tests/fail/invalid_tag_enum.rs:14:22
   |
14 |     #[packable(tag = [0; 32])]
   |                      ^^^^^^^
